--- a/index.html
+++ b/index.html
@@ -1,12 +1,31 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Creating and Inserting DOM Elements</title>
-  </head>
-  <script type="application/javascript">
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Test Page</title>
+</head>
+<body>
+  <h1>Welcome to the Test Page</h1>
+  <p>
+    This is a <strong>strong</strong> paragraph containing an <em>emphasized</em> word and an 
+    <a href="https://developer.mozilla.org/en-US/docs/Web/HTML">MDN Web Docs link</a>.
+  </p>
+  <table>
+    <tr>
+      <th>Header 1</th>
+      <th>Header 2</th>
+    </tr>
+    <tr>
+      <td>Data 1</td>
+      <td>Data 2</td>
+    </tr>
+  </table>
+  <script>
+    var newHeader = document.createElement('h1');
+    newHeader.id = 'victory';
+    newHeader.textContent = 'John Doe is the champion';
+    document.body.appendChild(newHeader);
   </script>
-  <body>
-    <main id="main"></main>
-    <script type="text/javascript" src="index.js"></script>
-  </body>
+</body>
 </html>
